--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -20,12 +20,12 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let user of userFilter; let i = index">
+      <tr *ngFor="let user of users; let i = index">
         <th scope="row">{{i+1}}</th>
         <td>{{ user.name }}</td>
         <td>{{ user.email }}</td>
         <td>
-          <button class="btn btn-danger" (click)="deleteById(i)">Delete</button>
+          <button class="btn btn-danger" (click)="deleteById( user.id )">Delete</button>
         </td>
       </tr>
 
