tạo ra group nhưng chưa làm phân loại cho từng hạng mục trong group

--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -16,6 +16,7 @@
         <th scope="col">#</th>
         <th scope="col">Name</th>
         <th scope="col">Email</th>
+        <th scope="col">Khoá học</th>
         <th scope="col">Handle</th>
       </tr>
       </thead>
@@ -24,6 +25,7 @@
         <th scope="row">{{i+1}}</th>
         <td>{{ user.name }}</td>
         <td>{{ user.email }}</td>
+        <td><app-group></app-group></td>
         <td>
           <button class="btn btn-danger" (click)="deleteById( user.id )">Delete</button>
         </td>
