đã edit được user

--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -31,7 +31,7 @@
         </ng-container>
         <td>
           <button class="btn btn-danger" (click)="deleteById( user.id )">Delete</button>
-<!--          <button class="btn btn-success" [routerLink]="'edit/'+user.id">Edit</button>-->
+          <button class="btn btn-success" [routerLink]="'edit/'+user.id">Edit</button>
         </td>
       </tr>
 
